  type compatibility (in a class type) (Jacques Garrigue)
- PR#7038: out of memory condition in caml_io_mutex_lock
  (Xavier Leroy, report by Marc Lasson)
- PR#7039: Unix.getsockname returns garbage for unnamed PF_UNIX sockets
  (Xavier Leroy)
- PR#7042 and GPR#295: CSE optimization confuses the FP literals +0.0 and -0.0
  (Xavier Leroy)
- GPR#205: Clear caml_backtrace_last_exn before registering as root
  (report and fix by Frederic Bour)
- GPR#220: minor -dsource error on recursive modules
  (Hongbo Zhang)
- GPR#228: fix a dangling internal pointer in (bytecode )debug_info
  (Gabriel Scherer and Mark Shinwell and Xavier Leroy)
- GPR#233: Make CamlinternalMod.init_mod robust to optimization
  (Pierre Chambart, Mark Shinwell)
- GPR#249: fix a few hardcoded ar commands
  (Daniel Bünzli)
- GPR#251: fix cross-compilation with ocamldoc enabled
  (whitequark)
- GPR#280: Fix stdlib dependencies for .p.cmx (Pierre Chambart,
  Mark Shinwell)
- GPR#283: Fix memory leaks in intern.c when OOM is raised
  (Marc Lasson, review by Alain Frisch)
- GPR#313: Prevent quadratic cases in CSE
  (Pierre Chambart, review by Xavier Leroy)

Features wishes:
- PR#4518, GPR#29: change location format for reporting errors in ocamldoc
  (Sergei Lebedev)
- PR#4714: List.cons
- PR#5418 (comments) : generate dependencies with $(CC) instead of gcc
- PR#6167: OCAMLPARAM support for disabling PIC generation ("pic=0")
  (Gabor Pali)
- PR#6367: introduce Asttypes.arg_label to encode labelled arguments
- PR#6452, GPR#140: add internal suport for custom printing formats
  (Jérémie Dimino)
- PR#6611: remove the option wrapper on optional arguments in the syntax tree
- PR#6635: support M.[], M.(), M.{< >} and M.[| |]
  (Jeremy Yallop, review by Gabriel Radanne)
- PR#6691: install .cmt[i] files for stdlib and compiler-libs
  (David Sheets, request by Gabriel Radanne)
- PR#6722: compatibility with x32 architecture (x86-64 in ILP32 mode).
  ocamlopt is not supported, but bytecode compiles cleanly.